--- a/common-applications/test-environment/openeuler-devops/exec-updator/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/exec-updator/deployment.yaml
@@ -42,13 +42,13 @@ spec:
         vault.hashicorp.com/agent-inject-perms-etcd_client.crt: "0400"
         vault.hashicorp.com/agent-inject-template-etcd_client.crt: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
-          {{ .Data.data.etcdCrt }}
+          {{ .Data.data.etcdExecUpdatorCrt }}
           {{- end }}
         vault.hashicorp.com/agent-inject-secret-etcd_client.key: 'internal/data/infra-test/openeuler-devops'
         vault.hashicorp.com/agent-inject-perms-etcd_client.key: "0400"
         vault.hashicorp.com/agent-inject-template-etcd_client.key: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
-          {{ .Data.data.etcdKey }}
+          {{ .Data.data.etcdExecUpdatorKey }}
           {{- end }}
         vault.hashicorp.com/agent-inject-secret-etcd_ca.crt: 'internal/data/infra-test/openeuler-devops'
         vault.hashicorp.com/agent-inject-perms-etcd_ca.crt: "0400"
