--- a/common-applications/test-environment/openeuler-devops/etcd-own/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/etcd-own/deployment.yaml
@@ -74,11 +74,11 @@ spec:
           value: "/etc/ods/etcd.yaml"
         resources:
           limits:
-            cpu: 500m
-            memory: 500Mi
+            cpu: "2"
+            memory: 8Gi
           requests:
-            cpu: 500m
-            memory: 500Mi
+            cpu: "2"
+            memory: 4Gi
         ports:
           - name: client
             containerPort: 2379
