--- a/common-applications/test-environment/openeuler-devops/job-event-handler/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/job-event-handler/deployment.yaml
@@ -80,7 +80,7 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 500Mi
+            memory: 1Gi
           requests:
             cpu: 500m
             memory: 500Mi
