--- a/common-applications/test-environment/openeuler-devops/workflow-runner/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/workflow-runner/deployment.yaml
@@ -78,7 +78,7 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 500Mi
+            memory: 1Gi
           requests:
             cpu: 500m
             memory: 500Mi
