deploy gitea-sh (#1973)

--- a/common-applications/test-environment/gitea-repo/autoscaler.yaml
+++ b/common-applications/test-environment/gitea-repo/autoscaler.yaml
@@ -1,11 +1,11 @@
 apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
-  name: gitea-repo-autoscaler
-  namespace: gitea-repo
+  name: gitea-repo-sh-autoscaler
+  namespace: gitea-repo-sh
 spec:
   scaleTargetRef:
-    name: gitea-repo-deployment
+    name: gitea-repo-sh-deployment
   triggers:
   - type: cron
     metadata:
