--- a/common-applications/test-environment/gitea-repo/namespace.yaml
+++ b/common-applications/test-environment/gitea-repo/namespace.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    app: gitea-repo 
-  name: gitea-repo
+    app: gitea-repo-sh
+  name: gitea-repo-sh
