--- a/common-applications/test-environment/gitea-repo/sa.yaml
+++ b/common-applications/test-environment/gitea-repo/sa.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gitea-repo
-  namespace: gitea-repo
+  name: gitea-repo-sh
+  namespace: gitea-repo-sh
