--- a/common-applications/test-environment/openeuler-ccs/console/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-ccs/console/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: hk
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/certificate-center-test
-  newTag: master-05dc93
+  newTag: master-2f2504
 kind: Kustomization
 namespace: openeuler-ccs
 resources:
