--- a/common-applications/test-environment/openeuler-devops/pods-monitor/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-devops/pods-monitor/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/pods_monitor
-  newTag: master-8c8654
+  newTag: master-25d809
 kind: Kustomization
 namespace: openeuler-devops
 resources:
