--- a/common-applications/test-environment/openeuler-devops/website/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-devops/website/kustomization.yaml
@@ -12,4 +12,4 @@ kind: Kustomization
 namespace: openeuler-devops
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/website
-  newTag: master-3da57c
+  newTag: master-fdca93
