--- a/common-applications/test-environment/openeuler-ccs/gateway/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-ccs/gateway/kustomization.yaml
@@ -16,4 +16,4 @@ resources:
 - service.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/ccs-gateway-test
-  newTag: master-2aff68
+  newTag: master-f6b076
