--- a/common-applications/test-environment/openeuler-ccs/eureka/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-ccs/eureka/kustomization.yaml
@@ -15,4 +15,4 @@ resources:
 - service.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/ccs-eureka-test
-  newTag: master-2aff68
+  newTag: master-cfd549
