--- a/common-applications/test-environment/openeuler-devops/post-extract-handler/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/post-extract-handler/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: post-extract-handler-deployment
   namespace: openeuler-devops
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: post-extract-handler
@@ -53,6 +54,16 @@ spec:
       labels:
         app: post-extract-handler
     spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - post-extract-handler
+            topologyKey: kubernetes.io/hostname
       serviceAccount: openeuler-devops
       imagePullSecrets:
       - name: huawei-swr-image-pull-secret
