--- a/common-applications/test-environment/merlin/merlin-server/kustomization.yaml
+++ b/common-applications/test-environment/merlin/merlin-server/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-server-test
-  newTag: main-40cc76
+  newTag: main-b75996
 kind: Kustomization
 namespace: merlin
 resources:
