--- a/common-applications/test-environment/openeuler-meetingserver/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-meetingserver/kustomization.yaml
@@ -17,7 +17,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver
-  newTag: master-305626
+  newTag: dev_merge_opengauss-929dec
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/meetingserver
   newName: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver
   newTag: master-097afd
