--- a/common-applications/test-environment/opengauss-website-revision/meetingserver/ingress.yaml
+++ b/common-applications/test-environment/opengauss-website-revision/meetingserver/ingress.yaml
@@ -27,3 +27,27 @@ spec:
   - hosts:
     - opengauss-website.test.osinfra.cn
     secretName: meetingserver-tls
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    kubernetes.io/ingress.class: nginx
+  name: opengauss-meetingserver-ingress
+  namespace: opengauss-website-revision
+spec:
+  rules:
+  - host: meeting-opengauss.test.osinfra.cn
+    http:
+      paths:
+      - backend:
+          serviceName: meetingserver-service
+          servicePort: 80
+        path: /
+        pathType: ImplementationSpecific
+  tls:
+  - hosts:
+    - meeting-opengauss.test.osinfra.cn
+    secretName: meetingserver-tls
