--- a/common-applications/test-environment/mindspore-meetingserver/kustomization.yaml
+++ b/common-applications/test-environment/mindspore-meetingserver/kustomization.yaml
@@ -17,4 +17,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver
-  newTag: master-69d928
+  newTag: dev_merge_opengauss-651918
