--- a/common-applications/test-environment/opengauss-website-revision/meetingserver/kustomization.yaml
+++ b/common-applications/test-environment/opengauss-website-revision/meetingserver/kustomization.yaml
@@ -14,3 +14,6 @@ commonAnnotations:
   kubernetes.ops.region: hk
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+images:
+- name: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver
+  newTag: dev_merge_opengauss-6f52dd
