--- a/common-applications/test-environment/openeuler-ccs/server/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-ccs/server/kustomization.yaml
@@ -15,4 +15,4 @@ resources:
 - service.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/ccs-server-test
-  newTag: master-983447
+  newTag: master-dab2e8
