--- a/common-applications/test-environment/merlin-02/merlin-website/kustomization.yaml
+++ b/common-applications/test-environment/merlin-02/merlin-website/kustomization.yaml
@@ -13,4 +13,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-website-test
-  newTag: sh-main-faff7a
+  newTag: sh-main-47182a
