--- a/common-applications/test-environment/merlin-02/merlin-server/kustomization.yaml
+++ b/common-applications/test-environment/merlin-02/merlin-server/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-server-test
-  newTag: main-148c14
+  newTag: psql-8b7fd7
 kind: Kustomization
 namespace: merlin-02
 resources:
