--- a/common-applications/om/autogpt/kustomization.yaml
+++ b/common-applications/om/autogpt/kustomization.yaml
@@ -1,10 +1,10 @@
 resources:
-  - deployment.yaml
-  - namespace.yaml
-  - ingress.yaml
-  - pvc.yaml
-  - service.yaml
-  - sa.yaml
+- deployment.yaml
+- namespace.yaml
+- ingress.yaml
+- pvc.yaml
+- service.yaml
+- sa.yaml
 commonAnnotations:
   kubernetes.ops.cluster: mindspore-cn4-x86
   kubernetes.ops.email: ""
@@ -12,3 +12,8 @@ commonAnnotations:
   kubernetes.ops.owner: wucaiping
   kubernetes.ops.region: bj
 namespace: autogpt
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/autogpt-test
+  newTag: main-0dcacb
